--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
 
 	
 
-	<link href="libs/jQuery.mmenu/dist/css/jquery.mmenu.all.css" rel="stylesheet">
 
-	<script src="libs/jquery/dist/jquery.min.js"></script>
-	<script src="libs/jQuery.mmenu/dist/js/jquery.mmenu.all.min.js"></script>
 
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#000">
@@ -602,8 +599,9 @@
 	</div>
 
 
-
 <link rel="stylesheet" href="css/main.min.css">
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.mmenu.all.min.js"></script>
 <script src="js/scripts.min.js"></script>
 
 </body>
