--- a/index.html
+++ b/index.html
@@ -593,15 +593,15 @@
 						</div>
 					</div>
 				</div>
-				<a href="#" id="up-butoon"><i class="fa fa-caret-square-o-up" aria-hidden="true"></i></a>
 			</footer>
 		</div>
 	</div>
 
 
+
 <link rel="stylesheet" href="css/main.min.css">
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.mmenu.all.min.js"></script>
+	<script src="libs/jquery/dist/jquery.min.js"></script>
+	<script src="libs/mmenu/dist/js/jquery.mmenu.all.min.js"></script>
 <script src="js/scripts.min.js"></script>
 
 </body>
