--- a/Test/index.html
+++ b/Test/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Test</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,7 +89,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1">
-							<h1 class="h1">Creative <span id="yellow">Design Agency</span></h1>
+							<h1 class="h1">Creative <span class="yellow">Design Agency</span></h1>
 						</div>
 						<div class="col-md-8 col-md-offset-2">
 							<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. 
@@ -104,7 +104,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1">
-							<h1 class="h1">Creative <span id="yellow">Design Agency</span></h1>
+							<h1 class="h1">Creative <span class="yellow">Design Agency</span></h1>
 						</div>
 						<div class="col-md-8 col-md-offset-2">
 							<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. 
@@ -119,7 +119,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1">
-							<h1 class="h1">Creative <span id="yellow">Design Agency</span></h1>
+							<h1 class="h1">Creative <span class="yellow">Design Agency</span></h1>
 						</div>
 						<div class="col-md-8 col-md-offset-2">
 							<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. 
@@ -135,7 +135,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<h2 class="h2">why <span id="blue">choose us</span> </h2>
+					<h2 class="h2">why <span class="blue">choose us</span> </h2>
 					<p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis. Nullam at scelerisque tellus mattis volutpat rhoncus, 
 					</p>
 				</div>
@@ -213,7 +213,7 @@
 	<section id="products">
 		<div class="prod-bgi" style="background-image: url(img/h2_bgi.png);">
 			<div class="prod-bgi_grdient">
-				<h2 class="h2 h2_white">our <span id="yellow">products</span></h2>
+				<h2 class="h2 h2_white">our <span class="yellow">products</span></h2>
 			</div>
 		</div>
 		<div class="owl-carousel product-carousel">
@@ -428,7 +428,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h2 class="h2 h2_left"><span id="blue">about</span> us</h2>
+					<h2 class="h2 h2_left"><span class="blue">about</span> us</h2>
 					<p class="text-align_left">Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis. Nullam at scelerisque tellus mattis volutpat rhoncus, 
 					</p>
 					<p class="p_black">Nullam at scelerisque tellus. Nulla feugiat iaculis ante, non tincidunt ligula scelerisque a. Vestibulum accumsan tincidunt odio vel finibus. Phasellus vestibulum lobortis ligula ut volutpat. Maecenas vitae nibh vel purus mollis semper. Nullam tempus feugiat mi id semper. Pellentesque ac posuere augue, vitae mollis enim. Etiam et ullamcorper dolor, a hendrerit quam. 
@@ -467,14 +467,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<h2 class="h2">get in  <span id="blue">touch</span> </h2>
+					<h2 class="h2">get in  <span class="blue">touch</span> </h2>
 					<p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis. Nullam at scelerisque tellus mattis volutpat rhoncus, 
 					</p>
 				</div>
 			</div>
 		</div>
 		<div id="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10289.873047203248!2d24.022256!3d49.852448!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x808e8719253e6808!2z0KTQvtGA0YPQvCDQm9GM0LLRltCy!5e0!3m2!1sru!2sua!4v1494239957640"  frameborder="0" style="border:0" allowfullscreen>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10289.873047203248!2d24.022256!3d49.852448!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x808e8719253e6808!2z0KTQvtGA0YPQvCDQm9GM0LLRltCy!5e0!3m2!1sru!2sua!4v1494239957640"   style="border:0" allowfullscreen>
 			</iframe>
 		</div>
 		<div class="form-wrap">
@@ -510,12 +510,12 @@
 										Country Name
 									</address>
 									<address>
-										<a class="tel-contact" href="tel:+880 123 456 78 98">+880 123 456 78 98</a> <br>
-										<a class="tel-contact" href="tel:+860 987 648 74 95">+860 987 648 74 95</a>
+										<a class="tel-contact" href="tel:+8801234567898"> +880 123 456 78 98</a> <br>
+										<a class="tel-contact" href="tel:+8609876487495"> +860 987 648 74 95</a>
 									</address>
 									<address>
-										<a class="mail-contact"href="mailto:company@mail.com">company@mail.com</a><br>
-										<a class="mail-contact"href="mailto:sales@mail.com">sales@mail.com</a>
+										<a class="mail-contact" href="mailto:company@mail.com">company@mail.com</a><br>
+										<a class="mail-contact" href="mailto:sales@mail.com">sales@mail.com</a>
 									</address>
 
 								</div>
