add favicon & gglMap

--- a/Shopno/index.html
+++ b/Shopno/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
- 
+
 	<title>Shopno</title>
 	<meta name="description" content="">
 
@@ -12,11 +12,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/manifest.json">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#000">
 	<!-- Windows Phone -->
@@ -29,22 +31,22 @@
 <body>
 	<header id="header">
 		<div class="row">
-				<div class="col-md-12">
-					<div class="menu_wrap">
-						<ul>
-							<li class="active-li"><a id="goto_header" href="#">home</a></li>
-							<li><a id="goto_s-about_us" href="#">about us</a></li>
-							<li><a id="goto_s-works" href="#">works</a></li>
-							<li><a id="goto_s-services" href="#">our services</a></li>
-							<li><a id="goto_s-team" href="#">team</a></li>
-							<li><a id="goto_s-worker" href="#">reviews</a></li>
-							<li><a id="goto_s-partners" href="#">partners</a></li>
-							<li><a id="goto_s-contact" href="#">contacts</a></li>
-						</ul>
-					</div>
-					
+			<div class="col-md-12">
+				<div class="menu_wrap">
+					<ul>
+						<li class="active-li"><a id="goto_header" href="#">home</a></li>
+						<li><a id="goto_s-about_us" href="#">about us</a></li>
+						<li><a id="goto_s-works" href="#">works</a></li>
+						<li><a id="goto_s-services" href="#">our services</a></li>
+						<li><a id="goto_s-team" href="#">team</a></li>
+						<li><a id="goto_s-worker" href="#">reviews</a></li>
+						<li><a id="goto_s-partners" href="#">partners</a></li>
+						<li><a id="goto_s-contact" href="#">contacts</a></li>
+					</ul>
 				</div>
+
 			</div>
+		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">	
@@ -601,7 +603,8 @@
 								<div class="contact-form-adr">
 									<a href="mailto:info@designagency.net">E-mail: info@designagency.net</a>
 								</div>
-								<img src="img/map.jpg" alt="map">
+								<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2359.3224410660796!2d24.02348453547136!3d49.8451009459668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1510221356740" width="405" height="220" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<!-- <img src="img/map.jpg" alt="map"> -->
 							</div>
 
 						</div>
