responsisive dish page

--- a/Cooking/dish.html
+++ b/Cooking/dish.html
@@ -149,7 +149,7 @@
               </div>
               <div class="col-md-3">
                 <aside class="dish-reciptes-box">
-                  <ul class="dish-reciptes-list">
+                  <ul class="dish-reciptes-list dish-reciptes-list__flex">
                     <li class="dish-reciptes-item"><a class="dish-reciptes-link" href="#">
                         <div class="img__wrap"><img src="main/img/dish_page/reciptes/1.jpg" alt="рецепт лазаньи с курицей"></div>
                         <h2 class="h2 h2__center h2__absolute">рецепт лазаньи с курицей</h2></a></li>
