--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -255,12 +255,12 @@
               </div>
               <div class="slide-img"><img src="main/img/header/header-item-img.png" alt="Item">
                 <div class="slide-img-popup slide-img-popup-0">
-                  <div class="slide-img-dot"></div>
-                  <div class="slide-img-descr">High-quality plastic with removable</div>
+                  <div class="dot-popup slide-img-dot"></div>
+                  <div class="dot-popup--descr slide-img-descr">High-quality plastic with removable</div>
                 </div>
                 <div class="slide-img-popup slide-img-popup-1">
-                  <div class="slide-img-dot"></div>
-                  <div class="slide-img-descr">High-quality plastic with removable second</div>
+                  <div class="dot-popup slide-img-dot"></div>
+                  <div class="dot-popup--descr slide-img-descr">High-quality plastic with removable second</div>
                 </div>
               </div>
             </div>
@@ -275,8 +275,8 @@
               </div>
               <div class="slide-img"><img src="main/img/header/header-item-img.png" alt="Item">
                 <div class="slide-img-popup">
-                  <div class="slide-img-dot"></div>
-                  <div class="slide-img-descr">High-quality plastic with removable</div>
+                  <div class="dot-popup slide-img-dot"></div>
+                  <div class="dot-popup--descr slide-img-descr">High-quality plastic with removable</div>
                 </div>
               </div>
             </div>
@@ -291,8 +291,8 @@
               </div>
               <div class="slide-img"><img src="main/img/header/header-item-img.png" alt="Item">
                 <div class="slide-img-popup">
-                  <div class="slide-img-dot"></div>
-                  <div class="slide-img-descr">High-quality plastic with removable</div>
+                  <div class="dot-popup slide-img-dot"></div>
+                  <div class="dot-popup--descr slide-img-descr">High-quality plastic with removable</div>
                 </div>
               </div>
             </div>
@@ -3421,8 +3421,7 @@
         <section class="contacts">
           <div class="container">
             <div class="cantacts-box">
-              <div class="contacts-col">
-                <div class="footer-logo"><span class="footer-logo_bold">media</span>market</div>
+              <div class="contacts-col"><a class="footer-logo" href="#"><span class="footer-logo_bold">media</span>market</a>
                 <div class="footer-tel"><a href="tel:+1(732)446–6721">+1(732)446–6721</a></div>
                 <div class="footer-addr">
                   <address>
