--- a/Board/index.html
+++ b/Board/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:image" content="path/to/image.jpg">
-    <link rel="shortcut icon" href="main/img/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="main/img/favicon/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="main/img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="main/img/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="main/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="main/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="main/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="main/img/favicon/manifest.json">
+    <link rel="mask-icon" href="main/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
     <meta name="theme-color" content="#000">
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
